# ribs

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  TESTING.md
.specify/memory/: constitution.md
backend/: .env.example  README.md  pyproject.toml
backend/data/: gifts.example.csv
backend/src/: __init__.py  dev_server.py  main.py
backend/src/adapters/: __init__.py
backend/src/adapters/embeddings/: openai_adapter.py
backend/src/adapters/mcp/: __init__.py  server.py
backend/src/adapters/mcp/tools/: __init__.py  get_gift_details.py  get_recommendations.py
backend/src/adapters/vectors/: s3_vectors_adapter.py
backend/src/cli/: upload_gifts.py
backend/src/config/: logging.py  settings.py
backend/src/domain/entities/: gift.py  gift_details.py  price_range.py  query_context.py  recommendation_request.py  recommendation_response.py
backend/src/domain/ports/: __init__.py  embedding_provider.py  vector_store.py
backend/src/domain/services/: __init__.py  embedding_service.py  recommendation_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/contract/: __init__.py  test_get_gift_details.py  test_get_recommendations.py
backend/tests/integration/: test_recommendation_flow.py  test_refinement_flow.py
backend/tests/unit/: __init__.py  test_embedding_blending.py  test_embedding_service.py  test_get_gift_details_tool.py  test_get_recommendations_tool.py  test_recommendation_service.py
frontend/: .eslintrc.cjs  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  global.d.ts  index.css  (+2 more)
(+19 files in other folders)
